--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@google-cloud/dialogflow-cx": "^4.1.0",
-    "@google-cloud/functions-framework": "^3.3.0"
+    "@google-cloud/functions-framework": "^3.3.0",
+    "axios": "^1.5.1",
+    "axios-cache-interceptor": "^1.3.1",
+    "pokenode-ts": "^1.20.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
