--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@google-cloud/functions-framework": "^3.3.0",
     "axios": "^1.5.1",
     "axios-cache-interceptor": "^1.3.1",
+    "dialogflow-cx-messenger-ts": "^1.0.3",
     "pokenode-ts": "^1.20.0"
   },
   "devDependencies": {
